--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "main": "server.js",
   "scripts": {
     "start": "node backend/server.js",
-    "dev": "SET NODE_ENV=DEVELOPMENT&& nodemon backend/server.js",
-    "prod": "SET NODE_ENV=PRODUCTION&& nodemon backend/server.js",
+    "dev": "set NODE_ENV=DEVELOPMENT&& nodemon backend/server.js",
+    "prod": "set NODE_ENV=PRODUCTION&& nodemon backend/server.js",
     "seeder": "node backend/utils/seeder.js"
   },
   "author": "manish bharti",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.7"
+    "mongoose": "^6.2.7",
+    "validator": "^13.7.0"
   }
 }
